fix(orienteur): spacing emergency

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,3 +1,9 @@
 .fr-container {
   max-width: 1440px;
 }
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 2rem;
+}
